--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,90 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="choose">Choose</string>
-    <string name="choose_app">Choose App</string>
-    <string name="installed_app">Installed App</string>
-    <string name="installed_module">Installed Module</string>
+    <string name="choose">选择</string>
+    <string name="choose_app">选择应用</string>
+    <string name="installed_app">已安装应用</string>
+    <string name="installed_module">已安装模块</string>
     <string name="empty_empty">Empty</string>
-    <string name="filter">Filter</string>
-    <string name="open_source_path">Open Source</string>
-    <string name="xp_setting">Xposed Setting</string>
-    <string name="tg_group">Telegram Group</string>
-    <string name="fake_location">Fake Location(Preview)</string>
-    <string name="real_location">Real Location</string>
-    <string name="close_fake_location">Disable FakeLocation</string>
-    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
-    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
-    <string name="jump_module">Go to Module Manager</string>
-    <string name="module_setting">Module Manager</string>
-    <string name="enable_xposed">Enable Xposed Framework</string>
-    <string name="hider">Hide</string>
-    <string name="hide_root">Hide Root</string>
-    <string name="hide_xposed">Hide Xposed</string>
-    <string name="userRemark">User Remark</string>
-    <string name="done">Done</string>
-    <string name="cancel">Cancel</string>
-    <string name="permission_setting">Setting</string>
-    <string name="no_reminders">No Reminders</string>
-    <string name="app_stop">Stop Running</string>
-    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
-    <string name="is_stop">%s is Stopped</string>
-    <string name="app_clear">Clear Data</string>
-    <string name="app_clear_hint">Clear Data for %s?</string>
-    <string name="app_remove">Uninstall App</string>
-    <string name="app_shortcut">Create Shortcut</string>
-    <string name="shortcut_name">Shortcut Name</string>
-    <string name="try_add_shortcut">Try Added To Desktop</string>
-    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for VCamera</string>
-    <string name="install_success">Installed Successfully</string>
-    <string name="install_fail">Installed Failed: %s</string>
-    <string name="install_fail_no_msg">Installed Failed</string>
-    <string name="uninstall_success">Uninstalled Successfully</string>
-    <string name="uninstall_fail">Uninstalled Failed</string>
-    <string name="uninstall_app">Uninstall App</string>
-    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
-    <string name="uninstall_module">Uninstall Module</string>
-    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
-    <string name="remove_success">Removed Successfully</string>
-    <string name="clear_success">Cleared Successfully</string>
-    <string name="start_fail">Launched Failed</string>
-    <string name="start_in_outside">Start module in outside</string>
-    <string name="restart_module">Restart app to apply change</string>
-    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
-    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
-    <string name="other">Others</string>
-    <string name="daemon_enable">Daemon</string>
-    <string name="gms_manager">GMS Manager</string>
-    <string name="jump_gms">Go to Gms Manager</string>
-    <string name="enable_gms">Enable Service</string>
-    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
-    <string name="disable_gms">Disable Service</string>
-    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
-    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>
+    <string name="filter">筛选</string>
+    <string name="open_source_path">开源</string>
+    <string name="xp_setting">Xposed 设置</string>
+    <string name="tg_group">电报群组</string>
+    <string name="fake_location">虚拟位置（预览）</string>
+    <string name="real_location">真实位置</string>
+    <string name="close_fake_location">禁用虚拟位置</string>
+    <string name="close_app_fake_location">为 %s 禁用虚拟位置</string>
+    <string name="close_fake_location_success">为 %s 成功禁用虚拟位置</string>
+    <string name="jump_module">转到模块管理器</string>
+    <string name="module_setting">模块管理器</string>
+    <string name="enable_xposed">启用 Xposed 框架</string>
+    <string name="hider">隐藏</string>
+    <string name="hide_root">隐藏 root</string>
+    <string name="hide_xposed">隐藏 Xposed</string>
+    <string name="userRemark">用户备注</string>
+    <string name="done">完成</string>
+    <string name="cancel">取消</string>
+    <string name="permission_setting">设置</string>
+    <string name="no_reminders">无提醒</string>
+    <string name="app_stop">停止运行</string>
+    <string name="app_stop_hint">你想要强制停止 %s 吗？</string>
+    <string name="is_stop">已停止</string>
+    <string name="app_clear">清除数据</string>
+    <string name="app_clear_hint">要为 %s 清除数据吗？</string>
+    <string name="app_remove">卸载应用</string>
+    <string name="app_shortcut">创建快捷方式</string>
+    <string name="shortcut_name">快捷方式名称</string>
+    <string name="try_add_shortcut">已尝试添加到桌面</string>
+    <string name="add_shortcut_fail_msg">如果添加失败，请前往系统设置并为 VCamera 开启“创建桌面快捷方式”权限</string>
+    <string name="install_success">安装成功</string>
+    <string name="install_fail">安装失败：%s</string>
+    <string name="install_fail_no_msg">安装失败</string>
+    <string name="uninstall_success">卸载成功</string>
+    <string name="uninstall_fail">卸载失败</string>
+    <string name="uninstall_app">卸载应用</string>
+    <string name="uninstall_app_hint">要卸载 %s，卸载后相关数据将被清除？</string>
+    <string name="uninstall_module">卸载模块</string>
+    <string name="uninstall_module_hint">你想要卸载这个模块吗？卸载后将不再工作？</string>
+    <string name="remove_success">移除成功</string>
+    <string name="clear_success">清除成功</string>
+    <string name="start_fail">启动失败</string>
+    <string name="start_in_outside">在外部启动模块</string>
+    <string name="restart_module">重启应用以应用更改</string>
+    <string name="cannot_create_shortcut">此桌面不支持创建快捷方式</string>
+    <string name="uninstall_module_toast">请在模块管理器中卸载 Xposed 模块</string>
+    <string name="other">其他</string>
+    <string name="daemon_enable">守护进程</string>
+    <string name="gms_manager">GMS 管理器</string>
+    <string name="jump_gms">转到 GMS 管理器</string>
+    <string name="enable_gms">启用服务</string>
+    <string name="enable_gms_hint">开启谷歌服务可以使 youtube 等高度依赖谷歌播放服务的软件正常运行。</string>
+    <string name="disable_gms">禁用服务</string>
+    <string name="disable_gms_hint">禁用 GMS 提示">清除当前谷歌服务环境？谷歌服务数据将被清除。</string>
+    <string name="no_gms">目前手机上没有谷歌服务环境。</string>
 
 
 
 
-    <string name="app_name">VCamera</string>
-    <string name="app_name_all">Virtual Camera</string>
-    <string name="app_desc">Protect Your Camera Privacy.</string>
-    <string name="protect_method">Choose Protect Method</string>
-    <string name="protect_method_disable_camera">1. Disable</string>
-    <string name="protect_method_local">2. Use Local Video</string>
-    <string name="protect_method_network">3. Use Network Video Stream</string>
-    <string name="protect_tip_none">Tips: Please choose a protection method.</string>
-    <string name="protect_tip_disable">Tips: This will disable the virtual camera.</string>
-    <string name="protect_tip_local">Tips: This will replace the camera data with a local video.</string>
-    <string name="protect_tip_network">Tips: This will replace the camera data with a network video.</string>
-    <string name="protect_path_hint">Input video url</string>
-    <string name="save">Save</string>
-    <string name="choise_video">Choose Local Video</string>
-    <string name="killApps">Kill All Apps</string>
+    <string name="app_name">baozigecamera</string>
+    <string name="app_name_all">宝子哥直播助手</string>
+    <string name="app_desc">保护你的相机隐私</string>
+    <string name="protect_method">选择保护方法</string>
+    <string name="protect_method_disable_camera">1. 禁用</string>
+    <string name="protect_method_local">2. 使用本地视频</string>
+    <string name="protect_method_network">3. 使用网络视频流</string>
+    <string name="protect_tip_none">提示：请选择一种保护方法。</string>
+    <string name="protect_tip_disable">提示：这将禁用虚拟相机。</string>
+    <string name="protect_tip_local">提示：这将用本地视频替换相机数据</string>
+    <string name="protect_tip_network">提示：这将用网络视频替换相机数据。</string>
+    <string name="protect_path_hint">输入视频网址</string>
+    <string name="save">保存</string>
+    <string name="choise_video">选择本地视频</string>
+    <string name="killApps">杀死所有应用</string>
     <string name="open_source">Github</string>
-    <string name="setting">Virtual Camera Setting</string>
-    <string name="tips">Tips</string>
+    <string name="setting">虚拟相机设置</string>
+    <string name="tips">提示</string>
     <string name="dialog_github_start">This is an open source project.\nWelcome to Star my project.</string>
-    <string name="never_show">NeverShow</string>
-    <string name="goto_str">Goto</string>
-    <string name="cancle">Cancle</string>
-    <string name="audio_enable">Audio Enable:</string>
+    <string name="never_show">永不显示</string>
+    <string name="goto_str">转到</string>
+    <string name="cancle">取消</string>
+    <string name="audio_enable">音频启用:</string>
 </resources>
